--- a/ac/packages/maps/official/ac_arid.cfg
+++ b/ac/packages/maps/official/ac_arid.cfg
@@ -21,7 +21,8 @@
 //	  terms of this work. The best way to do this is with a link to this web page.
 
 shadowyaw 270
-fogcolour 0x9F8255mapmodelreset
+fogcolour 0x9F8255
+mapmodelreset
 mapmodel 2 2 0 0 "nothing"
 mapmodel 4 1 0 0 "comp_bridge"
 mapmodel 0 7 0 0 "ladder_7x"
