--- a/ac/packages/maps/official/ac_iceroad.cfg
+++ b/ac/packages/maps/official/ac_iceroad.cfg
@@ -20,6 +20,7 @@
 //	* Notice — For any reuse or distribution, you must make clear to others the license 
 //	  terms of this work. The best way to do this is with a link to this web page.
 
+shadowyaw 290
 mapmodelreset
 mapmodel 2 2 0 0 "nothing"
 mapmodel 4 1 0 0 "comp_bridge"
