numeric team names; choose separate skins for both teams for your player
git-svn-id: http://svn.code.sf.net/p/actiongame/code/trunk@4554 e016b1c5-ed68-44aa-a2f7-31cac88cffde

--- a/ac/config/menus_settings.cfg
+++ b/ac/config/menus_settings.cfg
@@ -20,21 +20,21 @@ menuitem "V-19 Combat Shotgun"			"nextprimary 2;echo V-19 Combat Shotgun selecte
 newmenu CLA
 
 menumdl playermodels/CLA/01 all 50 4
-menuitem "Comandante"           "skin 0" "chmenumdl CLA playermodels/CLA/01 all 50 4"
-menuitem "Psycho"               "skin 1" "chmenumdl CLA playermodels/CLA/02 all 50 4"
-menuitem "Bomber"               "skin 2" "chmenumdl CLA playermodels/CLA/03 all 50 4"
-menuitem "Ripper"               "skin 3" "chmenumdl CLA playermodels/CLA/04 all 50 4"
+menuitem "Comandante"           "skin_cla 0" "chmenumdl CLA playermodels/CLA/01 all 50 4"
+menuitem "Psycho"               "skin_cla 1" "chmenumdl CLA playermodels/CLA/02 all 50 4"
+menuitem "Bomber"               "skin_cla 2" "chmenumdl CLA playermodels/CLA/03 all 50 4"
+menuitem "Ripper"               "skin_cla 3" "chmenumdl CLA playermodels/CLA/04 all 50 4"
 
 
 newmenu RVSF
 
 menumdl playermodels/RVSF/01 all 50 4
-menuitem "Alpha"            "skin 0" "chmenumdl RVSF playermodels/RVSF/01 all 50 4"
-menuitem "Tango"            "skin 1" "chmenumdl RVSF playermodels/RVSF/02 all 50 4"
-menuitem "Cobra"            "skin 2" "chmenumdl RVSF playermodels/RVSF/03 all 50 4"
-menuitem "Viper"            "skin 3" "chmenumdl RVSF playermodels/RVSF/04 all 50 4"
-menuitem "Swat"             "skin 4" "chmenumdl RVSF playermodels/RVSF/05 all 50 4"
-menuitem "Police"           "skin 5" "chmenumdl RVSF playermodels/RVSF/06 all 50 4"
+menuitem "Alpha"            "skin_rvsf 0" "chmenumdl RVSF playermodels/RVSF/01 all 50 4"
+menuitem "Tango"            "skin_rvsf 1" "chmenumdl RVSF playermodels/RVSF/02 all 50 4"
+menuitem "Cobra"            "skin_rvsf 2" "chmenumdl RVSF playermodels/RVSF/03 all 50 4"
+menuitem "Viper"            "skin_rvsf 3" "chmenumdl RVSF playermodels/RVSF/04 all 50 4"
+menuitem "Swat"             "skin_rvsf 4" "chmenumdl RVSF playermodels/RVSF/05 all 50 4"
+menuitem "Police"           "skin_rvsf 5" "chmenumdl RVSF playermodels/RVSF/06 all 50 4"
 
 
 newmenu "QUICK setup"
