allow team-switching in non-team modes
git-svn-id: http://svn.code.sf.net/p/actiongame/code/trunk@4555 e016b1c5-ed68-44aa-a2f7-31cac88cffde

--- a/ac/config/scripts.cfg
+++ b/ac/config/scripts.cfg
@@ -59,8 +59,10 @@ alias resetbinds [ exec config/resetbinds.cfg; echo "3All binds have been reset
 // "changeteam" command.
 alias changeteam [
     if (= (curteam) 1) [ team CLA; alias tmp_oldteam 1 ] [ team RVSF; alias tmp_oldteam 0 ]
-    if (= (curteam) 0) [ if (= $tmp_oldteam 0) [ echo "You stayed on team 3CLA" ] [ echo "You switched to team 3CLA" ] ]
-    if (= (curteam) 1) [ if (= $tmp_oldteam 1) [ echo "You stayed on team 1RVSF" ] [ echo "You switched to team 1RVSF" ] ]
+    if (curmodeattr team) [
+        if (= (curteam) 0) [ if (= $tmp_oldteam 0) [ echo "You stayed on team 3CLA" ] [ echo "You switched to team 3CLA" ] ]
+        if (= (curteam) 1) [ if (= $tmp_oldteam 1) [ echo "You stayed on team 1RVSF" ] [ echo "You switched to team 1RVSF" ] ]
+    ]
 ]
 
 
