--- a/ac/config/menus_multiplayer.cfg
+++ b/ac/config/menus_multiplayer.cfg
@@ -12,6 +12,7 @@ alias joinservermenu [ searchlan 1
 // Normal in-game menu that opens when pressing escape and connected to a game.
 newmenu "In-game"
 
+menuinit [__ingamemenu_showmodel "In-game"]
 menuitemtextinput "Nickname:  " "result $curname" "name $arg1"
 menuitem "Change to the enemy team"	"changeteam"
 menuitem "Change weapon..."        	"showmenu Weapons"
@@ -29,9 +30,15 @@ menuitem "3Disconnect from server"	"disconnect"
 menuitem "3Quit AssaultCube"		"savequit"
 menuinitselection 12
 
+alias __ingamemenu_showmodel [
+        if (curteam) [alias __curskin (+ 1 $skin_rvsf)] [alias __curskin (+ 1 $skin_cla)]
+	chmenumdl $arg1 (concatword "playermodels/" (at "CLA RVSF" (curteam)) "/0" $__curskin) idle 20 4
+]
+
 // In-game menu that opens if when you press escape if you're admin state and connected to a game.
 newmenu "In-game admin"
 
+menuinit [__ingamemenu_showmodel "In-game admin"]
 menuitem "Set mode/map..."			"showmenu Gamemode"
 menuitem "Kick/ban player..."		"showmenu kick/ban"
 menuitem "Adjust teams..."			[ showmenu "Team adjustment" ]
