player skin menu improvements
git-svn-id: http://svn.code.sf.net/p/actiongame/code/trunk@4557 e016b1c5-ed68-44aa-a2f7-31cac88cffde

--- a/ac/config/menus_multiplayer.cfg
+++ b/ac/config/menus_multiplayer.cfg
@@ -12,12 +12,11 @@ alias joinservermenu [ searchlan 1
 // Normal in-game menu that opens when pressing escape and connected to a game.
 newmenu "In-game"
 
-menuinit [__ingamemenu_showmodel "In-game"]
-menuitemtextinput "Nickname:  " "result $curname" "name $arg1"
-menuitem "Change to the enemy team"	"changeteam"
-menuitem "Change weapon..."        	"showmenu Weapons"
-menuitem "Change player skin..."        [showmenu (at [CLA RVSF] (curteam))]
-menuitem "" -1
+menuitemtextinput "Nickname:  " "result $curname" "name $arg1" [__ingamemenu_showmodel "In-game" 0]
+menuitem "Change weapon..."        	"showmenu Weapons"  [__ingamemenu_showmodel "In-game" 0]
+menuitem "Change to the enemy team"	"changeteam" [__ingamemenu_showmodel "In-game" 1]
+menuitem "Change player skin..."        [showmenu (at [CLA RVSF] (curteam))]  [__ingamemenu_showmodel "In-game" 1]
+menuitem "" -1  [__ingamemenu_showmodel "In-game" 0]
 menuitem "Set mode/map..."		"showmenu Gamemode"
 menuitem "Kick/ban player..."		"showmenu kick/ban"
 menuitem "Adjust teams..."		[ showmenu "Team adjustment" ]
@@ -32,7 +31,7 @@ menuinitselection 12
 
 alias __ingamemenu_showmodel [
         if (curteam) [alias __curskin (+ 1 $skin_rvsf)] [alias __curskin (+ 1 $skin_cla)]
-	chmenumdl $arg1 (concatword "playermodels/" (at "CLA RVSF" (curteam)) "/0" $__curskin) idle 20 4
+	if $arg2 [chmenumdl $arg1 (concatword "playermodels/" (at "CLA RVSF" (curteam)) "/0" $__curskin) idle 15 3] [chmenumdl $arg1]
 ]
 
 // In-game menu that opens if when you press escape if you're admin state and connected to a game.
@@ -48,10 +47,10 @@ menuitem "Find a players IP address..."	"saycommand /whois "
 menuitem "Give admin..."			[ showmenu "give admin" ]
 menuitem "" -1
 menuitemtextinput "Nickname:  " "result $curname" "name $arg1"
-menuitem "Change to the enemy team"        "changeteam"
-menuitem "Change weapon..."        	"showmenu Weapons"
-menuitem "Change player skin..."          [showmenu (at [CLA RVSF] (curteam))]
-menuitem "Demos..."			"showmenu Demo"
+menuitem "Change weapon..."        	"showmenu Weapons" [__ingamemenu_showmodel "In-game admin" 0]
+menuitem "Change to the enemy team"        "changeteam" [__ingamemenu_showmodel "In-game admin" 1]
+menuitem "Change player skin..."          [showmenu (at [CLA RVSF] (curteam))] [__ingamemenu_showmodel "In-game admin" 1]
+menuitem "Demos..."			"showmenu Demo" [__ingamemenu_showmodel "In-game admin" 0]
 menuitem "" -1
 menuitem "4Main menu..."		[ closemenu "In-game admin"; showmenu main ]
 menuitem "4Browse servers..."		[ closemenu "In-game admin"; joinservermenu ]
