--- a/ac/config/menus_settings.cfg
+++ b/ac/config/menus_settings.cfg
@@ -19,6 +19,7 @@ menuitem "V-19 Combat Shotgun"			"nextprimary 2;echo V-19 Combat Shotgun selecte
 
 newmenu CLA
 
+menuinit [menuselection CLA $skin_cla]
 menumdl playermodels/CLA/01 all 50 4
 menuitem "Comandante"           "skin_cla 0" "chmenumdl CLA playermodels/CLA/01 all 50 4"
 menuitem "Psycho"               "skin_cla 1" "chmenumdl CLA playermodels/CLA/02 all 50 4"
@@ -28,6 +29,7 @@ menuitem "Ripper"               "skin_cla 3" "chmenumdl CLA playermodels/CLA/04 
 
 newmenu RVSF
 
+menuinit [menuselection RVSF $skin_rvsf]
 menumdl playermodels/RVSF/01 all 50 4
 menuitem "Alpha"            "skin_rvsf 0" "chmenumdl RVSF playermodels/RVSF/01 all 50 4"
 menuitem "Tango"            "skin_rvsf 1" "chmenumdl RVSF playermodels/RVSF/02 all 50 4"
