hook for personal server list added
git-svn-id: http://svn.code.sf.net/p/actiongame/code/trunk@4567 e016b1c5-ed68-44aa-a2f7-31cac88cffde

--- a/ac/config/menus_multiplayer.cfg
+++ b/ac/config/menus_multiplayer.cfg
@@ -2,10 +2,12 @@
 alias ingamemenu [ if (currole 1) [ showmenu "In-game admin" ] [ showmenu In-game ] ]
 
 // "Join server" menu.
+alias personalserverlist []
 alias joinservermenu [ searchlan 1
 		showallservers 1
 		showonlyfavourites 0
 		updatefrommaster
+		personalserverlist
 		showmenu server
 	]
 
