--- a/ac/config/menus.cfg
+++ b/ac/config/menus.cfg
@@ -32,7 +32,7 @@ alias genmapitems [
 newmenu maps
 // Add maps to the below list to include them in the normal map menu (also for botmaps).
 // Don't add ac_depot_classic to the maps list.
-alias defaultmaps "ac_aqueous ac_arctic ac_arid ac_complex ac_depot ac_desert ac_desert2 ac_desert3 ac_douze ac_elevation ac_gothic ac_iceroad ac_keller ac_mines ac_power ac_scaffold ac_shine ac_snow ac_sunset ac_toxic ac_urban"
+alias defaultmaps "ac_aqueous ac_arctic ac_arid ac_complex ac_depot ac_desert ac_desert2 ac_desert3 ac_douze ac_elevation ac_gothic ac_iceroad ac_keller ac_mines ac_power ac_rattrap ac_scaffold ac_shine ac_snow ac_sunset ac_toxic ac_urban"
 genmapitems	$defaultmaps
 menuitem	"" -1
 if (&& $mappack_version (listlen $mappack_maps)) [menuitem (concatword "Map-pack (version " $mappack_version ") maps...") [showmenu "mappack maps"]];
@@ -144,6 +144,7 @@ menuitem "R4zor				Map: ac_sunset, ac_gothic." -1
 menuitem "Halo				Map: ac_arctic." -1
 menuitem "BenWasHere			Map: ac_arid." -1
 menuitem "RuThLe$$ & Undead		Map: ac_iceroad." -1
+menuitem "Ratboy				Map: ac_rattrap." -1
 menuitem "" -1
 menuitem "Special thanks" -1
 menuitem "----------------" -1
