last of the cfg files for rattrap...
git-svn-id: http://svn.code.sf.net/p/actiongame/code/trunk@4577 e016b1c5-ed68-44aa-a2f7-31cac88cffde

--- a/ac/config/maprot.cfg
+++ b/ac/config/maprot.cfg
@@ -87,6 +87,26 @@ ac_sunset     : 5:12: 1: 4:12: 0     // ctf, 12 minutes, 4..12 players
 
 ac_complex    : 0:10: 1: 3:13: 0     // tdm, 10 minutes, 3..13 players
 
+ac_aqueous    :15: 6: 1: 2: 3: 2     // ktf, 6 minutes, 2..3 players
+ac_aqueous    : 5:12: 1: 4:11: 1     // ctf, 12 minutes, 4..11 players
+ac_aqueous    :13:10: 1:12:13: 0     // htf, 10 minutes, 12..13 players
+
+ac_arid       : 2: 8: 1: 2: 5: 1     // dm, 8 minutes, 2..5 players
+ac_arid       : 0:10: 1: 6: 0: 0     // tdm, 10 minutes, 6.. players
+
+ac_iceroad      : 5:10: 1: 5: 0: 0     // ctf, 10 minutes, 5.. players
+
+ac_douze      :10: 6: 1: 5: 5: 3     // osok, 6 minutes, 5 players
+ac_douze      : 2: 6: 1: 6: 6: 2     // dm, 6 minutes, 6 players
+
+ac_gothic     :15: 6: 1: 2: 3: 2     // ktf, 6 minutes, 2..3 players
+ac_gothic     : 5:12: 1: 4:11: 1     // ctf, 12 minutes, 4..11 players
+ac_gothic     :13:10: 1:12:13: 0     // htf, 10 minutes, 12..13 players
+
+ac_rattrap    : 2: 8: 1: 2: 5: 1     // dm, 8 minutes, 2..5 players
+ac_rattrap    : 0:10: 1: 6: 0: 0     // tdm, 10 minutes, 6.. players
+
+
 // Change this file to make the map rotation different and add more..
 // do only use standard maps and maps from your packages/maps/servermaps folder!
 
