--- a/ac/config/menus.cfg
+++ b/ac/config/menus.cfg
@@ -161,7 +161,7 @@ menuitem "lewiscommunications.com	Logo, media and web support." -1
 menuitem "" -1
 menuitem "Resources" -1 
 menuitem "-----------" -1
-menuitem "JCDPC				Laptop mapmodel, textures." -1
+menuitem "JCDPC				Mapmodels, textures." -1
 menuitem "Topher				Some crosshairs." -1
 menuitem "leileilol				Bullethole image." -1
 menuitem "Steini				Skyboxes." -1
@@ -170,6 +170,7 @@ menuitem "SimonOC			Nightball/Graveyard skymap." -1
 menuitem "LadyNightHawk		 	InhCanyons skymap." -1
 menuitem "Sock 				Iceflow skymap." -1
 menuitem "HitmanDaz[MT]		Playermodels" -1
+menuitem "Kell				At-sea skymap" -1
 menuitem "" -1
 menuitem "Texture sources" -1
 menuitem "------------------" -1
