--- a/ac/config/menus_edit.cfg
+++ b/ac/config/menus_edit.cfg
@@ -113,6 +113,7 @@ menuitem "Iceflow skymap"			[ loadsky "textures/skymaps/iceflow/iceflow" ]
 menuitem "Inhcanyons1 skymap"			[ loadsky "textures/skymaps/ladynighthawk/inhcanyons1" ]
 menuitem "Nightball skymap"			[ loadsky "textures/skymaps/socksky/nightball" ]
 menuitem "Grave skymap"				[ loadsky "textures/skymaps/socksky/grave" ]
+menuitem "At sea skymap"			[ loadsky "textures/skymaps/kothic/atsea" ]
 
 alias _closestenttypestatus 0
 //Map operations
@@ -245,7 +246,9 @@ menuitem "Roadblock/Barrier 2"	"newent mapmodel 12"
 menuitem "Drainpipe"		"newent mapmodel 59"
 menuitem "Wheel: Vertical"	"newent mapmodel 88"
 menuitem "Tyre: Horizontal"	"newent mapmodel 83"
-menuitem "Milk crate"		"newent mapmodel 112"
+menuitem "Gray milk crate"	"newent mapmodel 112"
+menuitem "Blue milk crate"	"newent mapmodel 134"
+menuitem "Red milk crate"	"newent mapmodel 135"
 
 newmenu Plants
 
@@ -278,6 +281,7 @@ newmenu Lights
 menuitem "Strahler"    		"saycommand /newent mapmodel 31"
 menuitem "Fluorescent lamp" 	"saycommand /newent mapmodel 32"
 menuitem "LightBulb"   		"saycommand /newent mapmodel 33"
+menuitem "Hanging lamp"		"saycommand /newent mapmodel 132"
 
 newmenu Industrial
 
@@ -300,6 +304,7 @@ menuitem "Camera mount (Wall)"			"saycommand /newent mapmodel 105"
 menuitem "Large concrete pipe"			"newent mapmodel 108"
 menuitem "Medium metal pipe"			"newent mapmodel 109"
 menuitem "Small metal pipe"			"newent mapmodel 110"
+menuitem "Vent flap"				"newent mapmodel 134"
 
 newmenu Fencing
 
@@ -349,6 +354,7 @@ menuitem "Coffee"               "newent mapmodel 53"
 menuitem "Flyer"                "newent mapmodel 54"
 menuitem "Tree Flyer"     	"newent mapmodel 26"
 menuitem "Potato box"		"newent mapmodel 56"
+menuitem "Cardboard box"	"newent mapmodel 131"
 
 
 newmenu "Ambient sounds"
