--- a/ac/config/default_map_settings.cfg
+++ b/ac/config/default_map_settings.cfg
@@ -161,6 +161,11 @@ mapmodel 1 2 8 0 "toca/barbwire"		// 127
 mapmodel 1 1 0 0 "toca/shelf"			// 128
 mapmodel 4 1 15 0 "toca/guardtower"		// 129
 mapmodel 1 2 0 0 "toca/treetrunk1"		// 130
+mapmodel 1 2 0 0 "rattrap/cbbox"		// 131
+mapmodel 0 0 4 0 "rattrap/hanginlamp"		// 132
+mapmodel 0 2 0 0 "rattrap/ventflap"		// 133
+mapmodel 1 1 0 0 "rattrap/milkcrate1"		// 134
+mapmodel 1 1 0 0 "rattrap/milkcrate2"		// 135
 
 
 // The models below are specific to the maps that they were made for and won't be of much or any use in other maps.
@@ -190,6 +195,9 @@ mapmodel 1 2 0 0 "toca/treetrunk1"		// 130
 						// Special stairs platforms with handrails. Specific to ac_aqueous. 
 						// This model requires careful clipping to be used.
 // mapmodel 0 0 0 0 "nocamp"			// No-camping sign, specific to ac_douze.
+// mapmodel 1 2 0 0 "rattrap/rbbox"		// Box mapmodel, specific to ac_rattrap.
+// mapmodel 1 3 0 0 "rattrap/barrel"		// Steel barrel mapmodel, specific to ac_rattrap.
+// mapmodel 1 2 0 0 "rattrap/barrel2"		// Steel barrel mapmodel, specific to ac_rattrap.
 
 
 // The skymap for this map. You can change this by commenting the one below, and then uncommenting one of your choosing
@@ -205,7 +213,7 @@ loadsky "textures/skymaps/steini/steini4"	// Comment this if you want to use a d
 // loadsky "textures/skymaps/ladynighthawk/inhcanyons1"
 // loadsky "textures/skymaps/socksky/nightball"
 // loadsky "textures/skymaps/socksky/grave"
-
+// loadsky "textures/skymaps/kothic/atsea"
 
 
 // Alternative texture. See "docs/mapediting5.html" for more information. 
@@ -508,6 +516,7 @@ texture 0 "./makke/smallsteelbox.jpg"			// Texture #248
 
 							// Additional textures
 texture 0 "./drunkenM/rock_wall1.jpg"			// Texture #249
+texture 0 "./rattrap/rb_window.jpg"
 
 
 
@@ -563,6 +572,21 @@ texture 0 "./drunkenM/rock_wall1.jpg"			// Texture #249
 // texture 0 "./craig_fortune/crates/light_weathered_desert3.jpg"
 // texture 0 "./makke/douze.jpg"
 // texture 0 "./makke/clayceiling.jpg"
+// texture 0 "./rattrap/rb_box_01.jpg"
+// texture 0 "./rattrap/rb_box_02.jpg"
+// texture 0 "./rattrap/rb_box_03.jpg"
+// texture 0 "./rattrap/rb_box_04.jpg"
+// texture 0 "./rattrap/rb_box_05.jpg"
+// texture 0 "./rattrap/rb_box_06.jpg"
+// texture 0 "./rattrap/rb_bricks_01.jpg"
+// texture 0 "./rattrap/rb_bricks_02.jpg"
+// texture 0 "./rattrap/rb_bricks_03.jpg"
+// texture 0 "./rattrap/rb_concrete.jpg"
+// texture 0 "./rattrap/rb_box_07.jpg"
+// texture 0 "./rattrap/rb_trim_03.jpg"
+// texture 0 "./rattrap/rb_trim_01.jpg"
+// texture 0 "./rattrap/rb_trim_02.jpg"
+// texture 0 "./rattrap/rb_window2.jpg"
 
 
 mapsoundreset	// Ambient sounds. Leave this command here, or else your sounds will mess up!
