rat trap license update due to makke's new barrel
git-svn-id: http://svn.code.sf.net/p/actiongame/code/trunk@4579 e016b1c5-ed68-44aa-a2f7-31cac88cffde

--- a/ac/config/default_map_settings.cfg
+++ b/ac/config/default_map_settings.cfg
@@ -196,8 +196,8 @@ mapmodel 1 1 0 0 "rattrap/milkcrate2"		// 135
 						// This model requires careful clipping to be used.
 // mapmodel 0 0 0 0 "nocamp"			// No-camping sign, specific to ac_douze.
 // mapmodel 1 2 0 0 "rattrap/rbbox"		// Box mapmodel, specific to ac_rattrap.
-// mapmodel 1 3 0 0 "rattrap/barrel"		// Steel barrel mapmodel, specific to ac_rattrap.
-// mapmodel 1 2 0 0 "rattrap/barrel2"		// Steel barrel mapmodel, specific to ac_rattrap.
+// mapmodel 1 3 0 0 "rattrapbarrel"		// Steel barrel mapmodel, specific to ac_rattrap.
+// mapmodel 1 2 0 0 "rattrapbarrel2"		// Steel barrel mapmodel, specific to ac_rattrap.
 
 
 // The skymap for this map. You can change this by commenting the one below, and then uncommenting one of your choosing
