--- a/ac/packages/maps/official/ac_rattrap.cfg
+++ b/ac/packages/maps/official/ac_rattrap.cfg
@@ -185,8 +185,8 @@ mapmodel 1 1 0 0 "toca/tyre"
 mapmodel 1 0 0 0 "toca/wheel"
 mapmodel 1 1 0 0 "rattrap/milkcrate1"
 mapmodel 1 1 0 0 "rattrap/milkcrate2"
-mapmodel 1 3 0 0 "rattrap/barrel"
-mapmodel 1 2 0 0 "rattrap/barrel2"
+mapmodel 1 3 0 0 "rattrapbarrel"
+mapmodel 1 2 0 0 "rattrapbarrel2"
 mapmodel 0 0 0 0 "toca/platformmet"
 mapsoundreset
 mapsound "./ambience/distant_cars.ogg" -1
