updated ingame ref so makkE remembers how to use screenshottype function
git-svn-id: http://svn.code.sf.net/p/actiongame/code/trunk@4580 e016b1c5-ed68-44aa-a2f7-31cac88cffde

--- a/ac/config/docs.cfg
+++ b/ac/config/docs.cfg
@@ -4,80 +4,6 @@ docsection [CubeScript]
 
 
 
-docident [-] [Performs a subtraction.];
-
-docargument [A] [the minuend] [] [0];
-
-docargument [B] [the subtrahend] [] [0];
-
-
-
-docident [!=] [Determines if two values are not equal.];
-
-docargument [A] [first value] [] [0];
-
-docargument [B] [second value] [] [0];
-
-
-
-docident [!=f] [Determines if a floating-point value is not equal to a second floating-point value.];
-
-docargument [A] [the first value] [] [0];
-
-docargument [B] [the second value] [] [0];
-
-
-
-docident [&&] [logical AND.];
-
-docargument [A] [first value] [] [0];
-
-docargument [B] [second value] [] [0];
-
-docexample [echo (&& 1 1)] [Output: 1];
-
-docexample [echo (&& 1 0)] [Output: 0];
-
-
-
-docident [*] [Performs a multiplication.];
-
-docargument [A] [the multiplicand] [] [0];
-
-docargument [B] [the multiplier] [] [0];
-
-
-
-docident [||] [logical OR.];
-
-docargument [A] [first value] [] [0];
-
-docargument [B] [second value] [] [0];
-
-docexample [echo (|| 1 0)] [output: 1];
-
-docexample [echo (|| 0 0)] [output: 0];
-
-
-
-docident [+] [Performs an addition.];
-
-docargument [A] [the first summand] [] [0];
-
-docargument [B] [the second summand] [] [0];
-
-docremark [Example: echo the sum of x and y is (+ $x $y)];
-
-
-
-docident [+f] [Adds up two floating-point numbers.];
-
-docargument [A] [the first summand] [float] [0];
-
-docargument [B] [the second summand] [float] [0];
-
-
-
 docident [<] [Determines if a value is smaller than a second value.];
 
 docargument [A] [the first value] [] [0];
@@ -94,22 +20,6 @@ docargument [B] [the second value] [] [0];
 
 
 
-docident [<=f] [Determines if a floating-point value is less than or equal to a second floating-point value.];
-
-docargument [A] [the first value] [] [0];
-
-docargument [B] [the second value] [] [0];
-
-
-
-docident [<f] [Determines if a floating-point value is smaller than a second floating-point value.];
-
-docargument [A] [the first value] [] [0];
-
-docargument [B] [the second value] [] [0];
-
-
-
 docident [=] [Determines if two values are equal.];
 
 docargument [A] [first value] [] [0];
@@ -117,14 +27,6 @@ docargument [A] [first value] [] [0];
 docargument [B] [second value] [] [0];
 
 docexample [echo there are only (concatword (= 1 1) (= 1 0)) types of people in the world] [Output: there are only 10 types of people in the world];
-
-
-
-docident [=f] [Determines if a floating-point value is equal to a second floating-point value.];
-
-docargument [A] [the first value] [] [0];
-
-docargument [B] [the second value] [] [0];
 
 
 
@@ -144,19 +46,61 @@ docargument [B] [the second value] [] [0];
 
 
 
-docident [>=f] [Determines if a floating-point value is greater than or equal to a second floating-point value.];
+docident [||] [logical OR.];
 
-docargument [A] [the first value] [] [0];
+docargument [A] [first value] [] [0];
 
-docargument [B] [the second value] [] [0];
+docargument [B] [second value] [] [0];
+
+docexample [echo (|| 1 0)] [output: 1];
+
+docexample [echo (|| 0 0)] [output: 0];
 
 
 
-docident [>f] [Determines if a floating-point value is greater than a second floating-point value.];
+docident [-] [Performs a subtraction.];
 
-docargument [A] [the first value] [] [0];
+docargument [A] [the minuend] [] [0];
 
-docargument [B] [the second value] [] [0];
+docargument [B] [the subtrahend] [] [0];
+
+
+
+docident [!=] [Determines if two values are not equal.];
+
+docargument [A] [first value] [] [0];
+
+docargument [B] [second value] [] [0];
+
+
+
+docident [*] [Performs a multiplication.];
+
+docargument [A] [the multiplicand] [] [0];
+
+docargument [B] [the multiplier] [] [0];
+
+
+
+docident [&&] [logical AND.];
+
+docargument [A] [first value] [] [0];
+
+docargument [B] [second value] [] [0];
+
+docexample [echo (&& 1 1)] [Output: 1];
+
+docexample [echo (&& 1 0)] [Output: 0];
+
+
+
+docident [+] [Performs an addition.];
+
+docargument [A] [the first summand] [] [0];
+
+docargument [B] [the second summand] [] [0];
+
+docremark [Example: echo the sum of x and y is (+ $x $y)];
 
 
 
@@ -208,11 +152,67 @@ docargument [B] [] [the divisor] [0];
 
 
 
+docident [<f] [Determines if a floating-point value is smaller than a second floating-point value.];
+
+docargument [A] [the first value] [] [0];
+
+docargument [B] [the second value] [] [0];
+
+
+
+docident [<=f] [Determines if a floating-point value is less than or equal to a second floating-point value.];
+
+docargument [A] [the first value] [] [0];
+
+docargument [B] [the second value] [] [0];
+
+
+
+docident [=f] [Determines if a floating-point value is equal to a second floating-point value.];
+
+docargument [A] [the first value] [] [0];
+
+docargument [B] [the second value] [] [0];
+
+
+
+docident [>f] [Determines if a floating-point value is greater than a second floating-point value.];
+
+docargument [A] [the first value] [] [0];
+
+docargument [B] [the second value] [] [0];
+
+
+
+docident [>=f] [Determines if a floating-point value is greater than or equal to a second floating-point value.];
+
+docargument [A] [the first value] [] [0];
+
+docargument [B] [the second value] [] [0];
+
+
+
 docident [-f] [Subtracts two floating-point numbers.];
 
 docargument [A] [the minuend] [float] [0];
 
 docargument [B] [the subtrahend] [float] [0];
+
+
+
+docident [!=f] [Determines if a floating-point value is not equal to a second floating-point value.];
+
+docargument [A] [the first value] [] [0];
+
+docargument [B] [the second value] [] [0];
+
+
+
+docident [+f] [Adds up two floating-point numbers.];
+
+docargument [A] [the first summand] [float] [0];
+
+docargument [B] [the second summand] [float] [0];
 
 
 
@@ -381,6 +381,12 @@ docremark [default: left mouse button];
 docident [autogetmap] [Determines if the current played map should be automatically downloaded if it is not available locally.];
 
 docargument [B] [enable auto map download] [min 0/max 1/default 1];
+
+
+
+docident [autoscreenshot] [Toggle for taking an automatic screenshot during intermission.];
+
+docargument [B] [0=Off, 1=On] [min 0/max 1/default 1];
 
 
 
@@ -620,6 +626,12 @@ dockey [F12] [] [];
 
 
 
+docident [screenshottype] [Toggle format of screenshot image. Your choice is for BMP (0) or JPEG (1).];
+
+docargument [T] [0=BMP, 1=JPEG] [min 0/max 1/default 1];
+
+
+
 docident [securemap] [Adds a map to the list of secured maps.];
 
 docargument [S] [the name of the map] [] [0];
@@ -728,21 +740,31 @@ docsection [Gameplay]
 
 docident [addbot] [add a bot for a given team with a given skill calling him a given name.];
 
-docargument [T] [team] [] [0];
+docargument [T] [team] [RVSF or CLA] [0];
 
-docargument [S] [skill] [best,good,medium,worse OR bad] [0];
+docargument [S] [skill] [best, good, medium, worse OR bad] [0];
 
-docargument [N] [name] [] [0];
+docargument [N] [name] [name for the bot] [0];
+
+docremark [This command only works for single player modes.];
+
+docexample [addbot RVSF medium Robbie] [Will add a bot named Robbie with a medium skill level to the RVSF team.];
 
 
 
 docident [addnbot] [will add a given count of bots for the given team with the given skill and select random names for them.];
 
-docargument [C] [count] [] [0];
+docargument [C] [count] [how many bots to add] [0];
 
-docargument [T] [team] [] [0];
+docargument [T] [team] [RVSF or CLA] [0];
 
-docargument [S] [skill] [best,good,medium,worse OR bad] [0];
+docargument [S] [skill] [best, good, medium, worse OR bad] [0];
+
+docremark [This command only works for single player modes.];
+
+docremark [The name of the bots will be selected randomly.];
+
+docexample [addnbot 2 CLA bad] [Will add 2 bots with a bad skill level to the CLA team.];
 
 
 
@@ -758,19 +780,35 @@ docargument [B] [the autoreload state] [on (1), off (0) min 0/max 1/default 1];
 
 
 
-docident [botskill] [];
+docident [botskill] [changes the skill level for the given bot.];
+
+docargument [N] [botname] [the name of the bot] [0];
+
+docargument [S] [botskill] [best, good, medium, worse OR bad] [0];
+
+docexample [botskill Robbie best] [Changes the previous bot skill level of the bot named Robbie to a 'best' skill level.];
 
 
 
-docident [botskillall] [];
+docident [botskillall] [changes the skill level for all bots.];
+
+docargument [S] [botskill] [best, good, medium, worse OR bad] [0];
+
+docexample [botskillall worse] [Changes the previous bot skill level for all bots to a 'worse' skill level.];
 
 
 
-docident [botsshoot] [];
+docident [botsshoot] [Enables or disables the ability of the bots to fire their weapons];
+
+docargument [T] [shooting bots?] [0||1] [0];
+
+docexample [botsshoot 0] [Bots won't shoot.];
 
 
 
 docident [changefollowplayer] [];
+
+docargument [D] [delta] [how many players to shift +/-] [0];
 
 
 
@@ -854,7 +892,7 @@ docident [curserver] [Returns information on the current server - if you're conn
 
 docargument [I] [info] [0, 1, 2, 3 or 4] [0];
 
-docremark [If I is 0 (omitted or any other value than the ones below) you will get a string with 'HOST:PORT IP DESC'];
+docremark [If I is 0 (omitted or any other value than the ones below) you will get a string with 'IP PORT'];
 
 docremark [If I is 1,2 or 3 you will get the IP, HostName or port respectively.];
 
@@ -882,39 +920,19 @@ docremark [Playback is interpolated for the player whose perspective you view.];
 
 
 
-docident [demoplaybackspeed] [Sets the playback speed for a demo.];
-
-docargument [P] [the playback speed] [min 10/max 1000/default 100];
-
-docremark [To see the effect, the variable must be set before playing a demo.];
-
-
-
-docident [demoplayer] [Shifts the camera to another demo player];
-
-docargument [N] [the shift direction] [1 (forwards), -1 (backwards)] [0];
-
-
-
 docident [disconnect] [Leaves a server.];
 
 
 
-docident [drawbeamtobots] [];
+docident [drawbeamtobots] [Draws a shooting line in the direction of all available bots.];
+
+docargument [] [this command does not take any arguments] [none] [0];
+
+docremark [This is a debugging command and only works for single player modes.];
 
 
 
 docident [dropflag] [];
-
-
-
-docident [followmode] [Choose the mode of following. Either "chase" [3rd person] or "embody" [1st person].];
-
-docargument [N] [followmode] [0 (chase) or 1 (embody)] [0];
-
-docremark [Default to 1.];
-
-dockey [F6] [] [toggle between chase and embody followmode];
 
 
 
@@ -956,9 +974,13 @@ docargument [B] [] [min 0/max 1/default 0];
 
 
 
-docident [idlebots] [];
+docident [idlebots] [Enables or disables the processing of the bots artificial intelligence];
 
-docargument [Y] [off OR on] [0||1] [0];
+docargument [T] [off OR on] [0||1] [0];
+
+docexample [idlebots 1] [Will make the bots stand still.];
+
+docexample [idlebots 0] [Will enable the bots to move and shoot.];
 
 
 
@@ -972,13 +994,17 @@ docargument [P] [prompt] [] [0];
 
 
 
-docident [kickallbots] [];
+docident [kickallbots] [Kicks all bots out of the current game.];
+
+docargument [] [this command does not take any arguments] [none] [0];
 
 
 
-docident [kickbot] [];
+docident [kickbot] [Kicks the bot with the given name out of the current game.];
 
-docargument [N] [botname] [] [0];
+docargument [N] [botname] [name of the bot to kick.] [0];
+
+docexample [kickbot Robbie] [Will make the bot named "Robbie" dissapear from the current game.];
 
 
 
@@ -1174,9 +1200,11 @@ docremark [See the player model folder for the according skin-id.];
 
 docident [spectate] [Toggle into spectator mode - only possible when you're dead!];
 
-dockey [F7] [] [free-flying spectator];
+dockey [SPACE] [] [switch spectator mode];
 
-dockey [F8] [] [follow spectator (see followmode)];
+dockey [MOUSE4] [] [next player];
+
+dockey [MOUSE5] [] [previous player];
 
 
 
@@ -1720,7 +1748,11 @@ docremark [This operation retains floor/ceiling heights/textures while swapping 
 
 
 
-docident [telebot] [];
+docident [telebot] [teletransports the bot with the lowest connection number to you current position.];
+
+docargument [] [this command does not take any arguments] [none] [0];
+
+docremark [This is a debugging command and only works for single player modes.];
 
 
 
@@ -1732,7 +1764,7 @@ docargument [D] [direction] [0..5 for Forward, Backward, Left, Right, Up AND Dow
 
 docident [togglebotview] [When used you will see what the bot sees. Type it again (with or without name) to return to the game(you will respawn).];
 
-docargument [N] [botname] [] [0];
+docargument [N] [botname] [the name of the bot] [0];
 
 
 
@@ -2322,6 +2354,14 @@ docargument [N] [the FOV value] [min 75/max 120/default 90];
 
 
 
+docident [fovcompat] [Sets the field of view (fov) based on the rules of AC v0.93];
+
+docargument [A] [FOV degree] [] [0];
+
+docremark [This command is supplied for backward compatibility.];
+
+
+
 docident [fpsrange] [];
 
 docargument [A] [min] [] [0];
@@ -2482,6 +2522,14 @@ docargument [V] [] [min 0/max 30000/default 10000];
 
 
 
+docident [screenres] [];
+
+docargument [W] [width] [] [0];
+
+docargument [H] [height] [] [0];
+
+
+
 docident [scr_h] [Sets the screen height.];
 
 docargument [] [the screen height] [min 0/max 768/default 10000];
@@ -2491,14 +2539,6 @@ docargument [] [the screen height] [min 0/max 768/default 10000];
 docident [scr_w] [Sets the screen width.];
 
 docargument [] [the screen width] [min 0/max 1024/default 10000];
-
-
-
-docident [screenres] [];
-
-docargument [W] [width] [] [0];
-
-docargument [H] [height] [] [0];
 
 
 
@@ -3443,6 +3483,7 @@ docargument [G] [Green colour intensity] [Between 1 and 255] [0];
 docargument [B] [Blue colour intensity] [Between 1 and 255] [0];
 
 docremark [You must define all 3 values, otherwise this command may not work correctly (use "1" as a placeholder if needed).];
+
 
 
 
