alias join "connect $arg1 $arg2 $arg3"
git-svn-id: http://svn.code.sf.net/p/actiongame/code/trunk@4583 e016b1c5-ed68-44aa-a2f7-31cac88cffde

--- a/ac/config/scripts.cfg
+++ b/ac/config/scripts.cfg
@@ -163,3 +163,7 @@ alias toggleshowmap [ showmap 1; onrelease [ showmap 0 ] ]
 // arg7 "server description"
 //alias sbconnect [ echo connecting to $arg7 ; connect $arg1 $arg2 ]
 
+// For those players who use IRC too much...
+alias join "connect $arg1 $arg2 $arg3"
+
+
