--- a/ac/config/autoexec.cfg
+++ b/ac/config/autoexec.cfg
@@ -1,1 +1,3 @@
-// this file gets executed if you start the game 
+// This file gets executed every time you start AssaultCube.
+
+// This is where you should put any scripts you may have created for AC.
