Added tex-reduce to settings menus.
git-svn-id: http://svn.code.sf.net/p/actiongame/code/trunk@4594 e016b1c5-ed68-44aa-a2f7-31cac88cffde

--- a/ac/config/menus_settings.cfg
+++ b/ac/config/menus_settings.cfg
@@ -72,6 +72,7 @@ alias new_gfx_quality [
 		echo "Be mighty careful! This setting puts any & every graphics setting as high as absolutely possible!"
 		trilinear 1
 		waterrefract 1
+		texreduce 0
 		] [
 		if (= $arg1 5) [	// High gfx quality
 			fsaa 4
@@ -92,6 +93,7 @@ alias new_gfx_quality [
 			shotline 1
 			trilinear 1
 			waterrefract 0
+			texreduce 0
 			] [
 			if (= $arg1 4) [	// Good gfx quality
 				fsaa 0
@@ -112,6 +114,7 @@ alias new_gfx_quality [
 				shotline 1
 				trilinear 1
 				waterrefract 0
+				texreduce 0
 				] [
 				if (= $arg1 3) [	// Medium gfx quality (DEFAULT)
 					fsaa 0
@@ -137,6 +140,7 @@ alias new_gfx_quality [
 					shotline 1
 					trilinear 1
 					waterrefract 0
+					texreduce 0
 					] [
 					if (= $arg1 2) [	// Low gfx quality
 						fsaa 0
@@ -157,6 +161,7 @@ alias new_gfx_quality [
 						shotline 0
 						trilinear 1
 						waterrefract 0
+						texreduce 0
 							] [	// Horrible gfx quality
 							fsaa 0
 							minlod 60
@@ -176,6 +181,7 @@ alias new_gfx_quality [
 							shotline 0
 							trilinear 0
 							waterrefract 0
+							texreduce 1
 						]
 					]
 				]
@@ -281,6 +287,7 @@ menuitemslider "Light error: " 1 100 "$lighterror" 5 "" "lighterror $arg1"
 alias watersubdiv_valuemap "16 8 4 2 1"
 menuitemslider "Water subdivision: " 0 4 "(findlist $watersubdiv_valuemap $watersubdiv)" 1 ["Lowest quality" "Low quality" "Medium quality" "High quality" "Highest quality"] "watersubdiv (at $watersubdiv_valuemap $arg1)"
 menuitemslider "Dynamic shadows: " 0 2 [getshadowq] 1 ["Off" "Blob" "Stencil"] [setshadowq $arg1]
+menuitemslider "Tex-reduce: " 0 3 "$texreduce" 1 "" "texreduce $arg1"
 menuitemcheckbox "Water reflection: " "$waterreflect" "waterreflect $arg1"
 
 getshadowq = [
